[package]
name = "reblessive"
version = "0.2.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
readme = "README.md"
description = "A small runtime for running deeply nested recursive functions"
keywords = ["stack","call","async","memory","runtime"]
repository = "https://github.com/DelSkayn/reblessive.git"

[dependencies]
futures-util = { version = "0.3.30", optional = true }
pin-project-lite = "0.2.13"
pin-utils = "0.1.0"

[dev-dependencies]
pollster = "0.3.0"
tokio = { version = "1.36.0", features = ["full"] }

[features]
tree = ["dep:futures-util"]
