[package]
name = "reblessive"
version = "0.3.2"
edition = "2021"
rust-version = "1.77"
license = "MIT"
readme = "README.md"
description = "A small runtime for running deeply nested recursive functions"
keywords = ["stack","call","async","memory","runtime"]
repository = "https://github.com/DelSkayn/reblessive.git"

[dependencies]
atomic-waker = "1.1.2"
pin-utils = "0.1.0"

[dev-dependencies]
futures-util = "0.3.30"
pollster = "0.3.0"
tokio = { version = "1.36.0", features = ["full"] }

[features]
tree = []

[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
